--- a/the-sea.html
+++ b/the-sea.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Yidi | Ripple Blossom</title>
+    <title>Yidi | The Sea</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -71,28 +71,25 @@
             <article>
                 <h2>The Sea</h2>
                 <hr class="star-primary">
-                <p class="notes text-center">!!! Website under construction !!!</p>
-                <p> This should be general project information.</p>
-                <hr class="star-light">
+                <h3>General Information</h3>
+
+                <hr class="star-primary">
 
                 <div class="video-wrapper">
                     <iframe src="https://www.youtube.com/embed/vy8qIdHn8xw" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <hr class="star-light">
+                <hr class="star-primary">
 
-                <p class="notes">You know what, coding website is fun! Almost as fun as making games!</p>
+                <h3>Description</h3>
                 <p>
-                    Pellentesque neque sem, hendrerit ut pharetra ultrices, volutpat vitae nunc. Morbi vulputate erat eros, eget posuere ipsum pretium ut. Praesent ac tellus neque. Pellentesque nec fringilla sem, fermentum accumsan lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut vitae tristique odio. Donec odio diam, egestas eu felis vitae, mollis euismod nisl. Mauris imperdiet urna mauris, eget dapibus ex pharetra sed. Nulla laoreet tristique lacus, vel aliquet est commodo in. Cras consectetur purus at suscipit volutpat. Donec in interdum mi. Cras ut sem et sapien efficitur tristique. Duis a sagittis lacus. Vivamus pharetra a ex molestie hendrerit. Vivamus at sapien vehicula lorem viverra condimentum.
+                    This game is made for round 0 of <i>Building Virtual World</i> class at <i>Entertainment Technology Center</i>. Round 0 aims at familiarize students with Unity. As I've been using Unity for more than a year at that time, I decided to challenge myself by making a narrative-focused game, which I have no experience before.
                 </p>
-                <p>
-                    Proin euismod auctor nisl, id placerat massa blandit sed. Ut aliquam in tellus non varius. Vivamus dignissim tempus erat, ultrices tempus metus pretium sit amet. Vestibulum pulvinar, urna hendrerit pretium dignissim, arcu erat mattis augue, sed tempor quam urna ut tellus. Mauris lobortis dolor in sem egestas, ut pharetra ipsum suscipit. Morbi pulvinar elit at leo tempor iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse eleifend vitae dui rutrum efficitur. Aliquam ornare malesuada urna, non tristique justo posuere sit amet. Proin egestas ligula eu tellus commodo vulputate. Nam sit amet condimentum odio. Mauris suscipit cursus consequat.
-                </p>
-                <p>
-                    Sed feugiat imperdiet nibh dictum tincidunt. Praesent in sollicitudin est. Nam vel metus a mauris fermentum ultrices. Morbi semper massa eu leo egestas, vitae maximus ex dictum. Donec convallis dignissim dolor vitae auctor. Maecenas facilisis congue lacus vitae efficitur. Aliquam sit amet orci augue. Pellentesque porta, risus placerat eleifend molestie, ipsum sapien convallis magna, et dictum velit tellus in enim. Vivamus condimentum diam in mi semper, et facilisis erat sagittis. Praesent posuere rhoncus quam, at pretium urna sollicitudin sed. Integer ut urna sit amet dolor eleifend consequat at eget elit.
-                </p>
-                <p>
-                    Pellentesque eget arcu volutpat, mollis lectus vel, lobortis nisl. Praesent vitae hendrerit arcu. Nam interdum lacus eros, volutpat sollicitudin ipsum maximus non. Cras lobortis nibh vel mattis mattis. Fusce egestas porttitor leo quis tempor. Nunc ullamcorper mi in neque blandit sagittis. Nam porta vehicula tortor quis tempus. Sed dictum est tortor, sed maximus magna dapibus id. Donec efficitur, dui vel faucibus molestie, ipsum dui ultricies ex, varius consequat risus nunc ac ligula. Duis ultrices ligula ut orci elementum, et fringilla nisl convallis. Praesent quis libero felis. In eget odio at mi ornare sollicitudin. In tempor ex ante, vitae accumsan erat placerat auctor. Cras vel nisi a lectus consectetur euismod. Donec dui eros, vehicula non sagittis nec, ultrices in enim.
-                </p>
+
+                <h3>Some interesting details</h3>
+                <p>While making this game, I added something details which are hard for players to see, but all who noticed them are surprised to how delicately the game is crafted. </p>
+
+                <h3>Download </h3>
+                <iframe frameborder="0" src="https://itch.io/embed/173382" class="game"></iframe>
 
             </article>
         </div>
